Make "Overview" link translatable rather than configurable
This is not ideal but will do for now.

Change-Id: Ie04afd78fbc2dc046617b45b4762b3262e1e0be8

--- a/oasis-webapp/src/main/resources/templates/messages_fr.xlf
+++ b/oasis-webapp/src/main/resources/templates/messages_fr.xlf
@@ -161,6 +161,11 @@
         <target>Déconnexion</target>
         <note priority="1" from="description">logout page title</note>
       </trans-unit>
+      <trans-unit id="3873172170699656332" datatype="html">
+        <source>https://www.oasis-eu.org/en/discover/oasis</source>
+        <target>https://www.oasis-eu.org/fr/discover/oasis</target>
+        <note priority="1" from="description">overview URL</note>
+      </trans-unit>
       <trans-unit id="3883458945142779741" datatype="html">
         <source>Change my password</source>
         <target>Changer mon mot de passe</target>
