--- a/oasis-webapp/src/main/resources/templates/messages_fr.xlf
+++ b/oasis-webapp/src/main/resources/templates/messages_fr.xlf
@@ -166,11 +166,6 @@
         <target>Déconnexion</target>
         <note priority="1" from="description">logout page title</note>
       </trans-unit>
-      <trans-unit id="3873172170699656332" datatype="html">
-        <source>https://www.oasis-eu.org/en/discover/oasis</source>
-        <target>https://www.oasis-eu.org/fr/discover/oasis</target>
-        <note priority="1" from="description">overview URL</note>
-      </trans-unit>
       <trans-unit id="3883458945142779741" datatype="html">
         <source>Change my password</source>
         <target>Changer mon mot de passe</target>
@@ -220,6 +215,11 @@
         <source><x id="APP_NAME"/> needs some authorizations</source>
         <target><x id="APP_NAME"/> a besoin d'autorisations</target>
         <note priority="1" from="description">Some app needs authorizations</note>
+      </trans-unit>
+      <trans-unit id="5037003483276382412" datatype="html">
+        <source>https://www.oasis-eu.org/en/terms</source>
+        <target>https://www.oasis-eu.org/fr/cgu</target>
+        <note priority="1" from="description">terms of use URL</note>
       </trans-unit>
       <trans-unit id="5108418000757845610" datatype="html">
         <source>Password changed</source>
@@ -286,11 +286,6 @@
         <target>J'ai oublié mon mot de passe.</target>
         <note priority="1" from="description">Link to the 'for my password' page</note>
       </trans-unit>
-      <trans-unit id="7867997273230925107" datatype="html">
-        <source>https://www.oasis-eu.org/en/tou</source>
-        <target>https://www.oasis-eu.org/fr/cgu</target>
-        <note priority="1" from="description">terms of use URL</note>
-      </trans-unit>
       <trans-unit id="8083850607833732083" datatype="html">
         <source>Authorize <x id="APP_NAME"/></source>
         <target>Autoriser <x id="APP_NAME"/></target>
@@ -330,6 +325,11 @@
         <source>You've signed out of <x id="START_BOLD"/><x id="APP_NAME"/><x id="END_BOLD"/></source>
         <target>Vous vous êtes déconnecté de <x id="START_BOLD"/><x id="APP_NAME"/><x id="END_BOLD"/></target>
         <note priority="1" from="description">successful sign-out from specific app</note>
+      </trans-unit>
+      <trans-unit id="8911447913400904360" datatype="html">
+        <source>https://www.oasis-eu.org/en/oz/discover</source>
+        <target>https://www.oasis-eu.org/fr/oz/decouvrir</target>
+        <note priority="1" from="description">overview URL</note>
       </trans-unit>
       <trans-unit id="9118307257372703426" datatype="html">
         <source>Choose your new password</source>
