--- a/oasis-webapp/src/main/resources/templates/messages_bg.xlf
+++ b/oasis-webapp/src/main/resources/templates/messages_bg.xlf
@@ -2,6 +2,11 @@
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
   <file original="SoyMsgBundle" datatype="x-soy-msg-bundle" xml:space="preserve" source-language="en-GB" target-language="bg-BG">
     <body>
+      <trans-unit id="85256968653381481" datatype="html">
+        <source>https://www.ozwillo.com/en/terms</source>
+        <target>https://www.ozwillo.com/bg/uslovia</target>
+        <note priority="1" from="description">terms of use URL</note>
+      </trans-unit>
       <trans-unit id="153573648835304242" datatype="html">
         <source>Account Access Attempted</source>
         <target>Опит за достъп до акаунта</target>
@@ -217,11 +222,6 @@
         <target><x id="APP_NAME"/> се нуждае от малко разрешения</target>
         <note priority="1" from="description">Some app needs authorizations</note>
       </trans-unit>
-      <trans-unit id="5037003483276382412" datatype="html">
-        <source>https://www.oasis-eu.org/en/terms</source>
-        <target>https://www.oasis-eu.org/bg/uslovia</target>
-        <note priority="1" from="description">terms of use URL</note>
-      </trans-unit>
       <trans-unit id="5108418000757845610" datatype="html">
         <source>Password changed</source>
         <target>Променена парола</target>
@@ -251,6 +251,11 @@
         <source>Go to the Oasis portal</source>
         <target>Към портала Oasis</target>
         <note priority="1" from="description">link title on header logo</note>
+      </trans-unit>
+      <trans-unit id="6402974759009404648" datatype="html">
+        <source>https://www.ozwillo.com/en/oz/discover</source>
+        <target>https://www.ozwillo.com/bg/oz/discover</target>
+        <note priority="1" from="description">overview URL</note>
       </trans-unit>
       <trans-unit id="6773310109171539191" datatype="html">
         <source>This link has expired. Try again below.</source>
@@ -326,11 +331,6 @@
         <source>You've signed out of <x id="START_BOLD"/><x id="APP_NAME"/><x id="END_BOLD"/></source>
         <target>Излязохте от <x id="START_BOLD"/><x id="APP_NAME"/><x id="END_BOLD"/></target>
         <note priority="1" from="description">successful sign-out from specific app</note>
-      </trans-unit>
-      <trans-unit id="8911447913400904360" datatype="html">
-        <source>https://www.oasis-eu.org/en/oz/discover</source>
-        <target>https://www.oasis-eu.org/bg/oz/discover</target>
-        <note priority="1" from="description">overview URL</note>
       </trans-unit>
       <trans-unit id="9118307257372703426" datatype="html">
         <source>Choose your new password</source>
